--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assignment"
         tools:targetApi="31">
+        <!--Wui Teck-->
+        <activity
+            android:name=".AdminActivityCreateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminActivityUpdateActivity"
+            android:exported="false" />
+
+
+        <!--Main-->
         <activity
             android:name=".AdminHomeActivity"
             android:exported="false" />
