--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity
             android:name=".AdminActivityUpdateActivity"
             android:exported="false" />
+        <activity
+            android:name=".AdminActivityRetrieveActivity"
+            android:exported="false" />
 
 
         <!--Main-->
