--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0' // Use the latest version available
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.google.android.material:material:x.y.z'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
