--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,12 @@ plugins {
 
 android {
     namespace 'com.example.assignment'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.assignment"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -50,6 +50,7 @@ dependencies {
     implementation 'androidx.room:room-common:2.4.2'
     implementation 'androidx.room:room-ktx:2.4.2'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
+    implementation 'androidx.core:core-ktx:+'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
